--- a/catalyst/app/assets/stylesheets/customize.scss
+++ b/catalyst/app/assets/stylesheets/customize.scss
@@ -33,6 +33,9 @@ table {
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0px 0px 8px rgba(0,0,0,0.8);
+  .btn {
+    margin: 5px;
+  }
 }
 
 .navbar-brand {
