--- a/catalyst/app/views/flows/index.html.erb
+++ b/catalyst/app/views/flows/index.html.erb
@@ -23,7 +23,7 @@
           <td><%= flow.name %></td>
           <td><%= flow.display_condition_expression %></td>
           <td>
-            <%= link_to 'View/edit', { id: flow, action: 'edit' }, { class: 'btn btn-sm btn-info' } %>
+            <%= link_to 'View/edit', { id: flow, action: 'edit' }, { class: 'btn btn-sm btn-info' } %>&nbsp;
             <%= link_to 'Steps', { action: 'index', controller: 'steps', flow_id: flow.id }, { class: 'btn btn-sm btn-info' } %>
           </td>
         </tr>
