--- a/catalyst/app/views/sites/_form.html.erb
+++ b/catalyst/app/views/sites/_form.html.erb
@@ -11,6 +11,11 @@
     <div class='form-group'>
       <%= f.text_area :config, class: 'form-control', placeholder: 'JSON Config', required: true %>
     </div>
+    <div class='form-group'>
+      <%= f.fields_for :datamap do |ff| %>
+        <%= ff.text_area :content, class: 'form-control', placeholder: 'JSON Datamap', required: true %>
+      <% end %>
+    </div>
     <% if @site.id %>
       <%= f.submit 'Update', class: 'btn btn-primary btn-lg' %>
     <% else %>
