working on runner

--- a/catalyst/app/views/sites/index.html.erb
+++ b/catalyst/app/views/sites/index.html.erb
@@ -26,6 +26,7 @@
           <td><%= site.config %></td>
           <td>
             <%= link_to 'View/Edit', { id: site, action: 'edit' }, { class: 'btn btn-sm btn-info' } %>
+            <%= link_to 'Run', { id: site, action: 'runner' }, { class: 'btn btn-sm btn-info' } %>
             &nbsp; | &nbsp;
             <%= link_to 'All Flows', { action: 'index', controller: 'flows', site_id: site.id }, { class: 'btn btn-sm btn-info' } %>
             <%= link_to 'New Flow', { action: 'new', controller: 'flows', site_id: site.id }, { class: 'btn btn-sm btn-danger' } %>
