--- a/catalyst/app/assets/stylesheets/customize.scss
+++ b/catalyst/app/assets/stylesheets/customize.scss
@@ -34,7 +34,9 @@ table {
   overflow: hidden;
   box-shadow: 0px 0px 8px rgba(0,0,0,0.8);
   .btn {
-    margin: 5px;
+    margin: 2px;
+    font-size: 10px;
+    font-weight: bold;
   }
 }
 
