--- a/catalyst/app/views/sites/_form.html.erb
+++ b/catalyst/app/views/sites/_form.html.erb
@@ -12,9 +12,7 @@
       <%= f.text_area :config, class: 'form-control', placeholder: 'JSON Config', required: true %>
     </div>
     <div class='form-group'>
-      <%= f.fields_for :datamap do |ff| %>
-        <%= ff.text_area :content, class: 'form-control', placeholder: 'JSON Datamap', required: true %>
-      <% end %>
+      <%= f.text_area :datamap, class: 'form-control', placeholder: 'JSON Datamap', required: true %>
     </div>
     <% if @site.id %>
       <%= f.submit 'Update', class: 'btn btn-primary btn-lg' %>
