--- a/catalyst/app/views/steps/_form.html.erb
+++ b/catalyst/app/views/steps/_form.html.erb
@@ -6,10 +6,10 @@
       <%= f.select :step_type, Step.step_types, { include_blank: false }, class: 'form-control' %>
     </div>
     <div class='form-group'>
-      <%= f.text_area :config, class: 'form-control', placeholder: 'Config', required: true, value: @step.config %>
+      <%= f.text_area :config, class: 'form-control', placeholder: 'Config', required: true, value: @step.config.try(:to_json) %>
     </div>
     <div class='form-group'>
-      <%= f.text_area :condition, class: 'form-control', placeholder: 'Condition', required: false, value: @step.display_condition_expression %>
+      <%= f.text_area :condition_expression, class: 'form-control', placeholder: 'Condition', required: false, value: @step.display_condition_expression %>
     </div>
     <% @flows.each do |flow| %>
       <div class="form-group">
