first dry run working

--- a/catalyst/app/assets/stylesheets/customize.scss
+++ b/catalyst/app/assets/stylesheets/customize.scss
@@ -1,4 +1,4 @@
-input[type='text'].form-control, textarea.form-control, select.form-control {
+input[type='text'].form-control, textarea.form-control, select.form-control, input[type='number'].form-control {
   border: none;
   background-color: #efefef;
   box-shadow: none;
