--- a/catalyst/app/views/sites/_form.html.erb
+++ b/catalyst/app/views/sites/_form.html.erb
@@ -12,7 +12,7 @@
       <%= f.text_area :config, class: 'form-control', placeholder: 'JSON Config', required: true, value: @site.config.try(:to_json) %>
     </div>
     <div class='form-group'>
-      <%= f.text_area :datamap, class: 'form-control', placeholder: 'JSON Datamap', required: true, value: @site.datamap.try(:to_json) %>
+      <%= f.text_area :datamap, class: 'form-control', placeholder: 'JSON Datamap', required: true, value: @site.datamap.try(:to_json), autocomplete: 'off' %>
     </div>
     <% if @site.id %>
       <%= f.submit 'Update', class: 'btn btn-primary btn-lg' %>
