--- a/catalyst/app/views/flows/_form.html.erb
+++ b/catalyst/app/views/flows/_form.html.erb
@@ -1,11 +1,14 @@
-<%= form_for [@site, @flow] do |f| %>
+<%= form_for [@site, @flow], html: { class: 'text-left' } do |f| %>
     <div class="form-group">
+      <%= f.label :site_id %>
       <%= f.select :site_id, Site.all.collect { |s| [ s.name, s.id ] }, { prompt: '---Select Site---' }, class: 'form-control', required: true %>
     </div>
     <div class='form-group'>
+      <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control', placeholder: 'Name', required: true %>
     </div>
     <div class='form-group'>
+      <%= f.label :condition %>
       <%= f.text_area :condition_expression, class: 'form-control', placeholder: 'Condition Expression', required: false, value: @flow.display_condition_expression %>
     </div>
     <% if @flow.id %>
