--- a/catalyst/app/views/sites/_form.html.erb
+++ b/catalyst/app/views/sites/_form.html.erb
@@ -1,11 +1,14 @@
-<%= form_for @site do |f| %>
+<%= form_for @site, html: { class: 'text-left' } do |f| %>
     <div class='form-group'>
+      <%= f.label :name %>
       <%= f.text_field :name, class: 'form-control', placeholder: 'Name', required: true %>
     </div>
     <div class='form-group'>
+      <%= f.label :code %>
       <%= f.text_field :code, class: 'form-control', placeholder: 'Code', required: true %>
     </div>
     <div class='form-group'>
+      <%= f.label :domain %>
       <%= f.text_field :domain, class: 'form-control', placeholder: 'Domain', required: true %>
     </div>
     <div class='form-group text-left'>
