--- a/catalyst/app/views/sites/_runner_form.html.erb
+++ b/catalyst/app/views/sites/_runner_form.html.erb
@@ -1,6 +1,12 @@
-<%= form_for @site, url: { action: :run } do |f| %>
-    <div class='form-group'>
-      <%= f.text_area :dataset, class: 'form-control', placeholder: 'JSON Dataset', required: true, value: current_dataset.to_json %>
-    </div>
-    <%= f.submit 'Start Browser', class: 'btn btn-primary btn-lg' %>
+<%= form_for @site, url: { action: :run }, html: { class: 'text-left' } do |f| %>
+  <div class='form-group'>
+    <%= f.label :data_set %>
+    <%= f.text_area :dataset, class: 'form-control', placeholder: 'JSON Dataset', required: true, value: current_dataset.to_json, rows: 20 %>
+  </div>
+  <%= f.submit 'Start Browser', class: 'btn btn-primary btn-lg' %>
 <% end %>
+<script type="text/javascript">
+  $(function() {
+    new JSONEditor('#site_dataset');
+  })        
+</script>
