added default scope

--- a/catalyst/app/assets/stylesheets/customize.scss
+++ b/catalyst/app/assets/stylesheets/customize.scss
@@ -1,3 +1,6 @@
+body {
+  font-size: 0.8rem;
+}
 input[type='text'].form-control, textarea.form-control, select.form-control, input[type='number'].form-control {
   border: none;
   background-color: #efefef;
