--- a/catalyst/app/views/steps/_form.html.erb
+++ b/catalyst/app/views/steps/_form.html.erb
@@ -17,7 +17,7 @@
     </div>
     <div class='form-group'>
       <%= f.label :serial %>
-      <%= f.text_field :serial, class: 'form-control', placeholder: 'Serial', required: true, value: @step.serial, type: :number, value: @site.steps.count + 1  %>
+      <%= f.text_field :serial, class: 'form-control', placeholder: 'Serial', required: true, type: :number, value: (@step.serial || (@site.steps.count + 1))  %>
     </div>
     <% @flows.each do |flow| %>
       <div class="form-group">
