--- a/catalyst/app/assets/stylesheets/customize.scss
+++ b/catalyst/app/assets/stylesheets/customize.scss
@@ -6,7 +6,7 @@ input[type='text'].form-control, textarea.form-control, select.form-control, inp
   background-color: #efefef;
   box-shadow: none;
   padding: 25px;
-  border-radius: 8px;
+  border-radius: 3px;
   margin-bottom: 30px;
 }
 
@@ -36,13 +36,22 @@ h1, h2, h3 {
 }
 
 table {
-  border-radius: 5px;
+  border-radius: 3px;
   overflow: hidden;
   box-shadow: 0px 0px 8px rgba(0,0,0,0.8);
   .btn {
     margin: 2px;
     font-size: 10px;
     font-weight: bold;
+  }
+  .form-control-table {
+    max-width: 80px;
+    border-radius: 3px;
+    border: none;
+    padding: 3px 8px;
+    &:focus {
+      outline: none !important;
+    }
   }
 }
 
@@ -57,7 +66,7 @@ table {
 }
 
 .ace_editor {
-  border-radius: 8px;
+  border-radius: 3px;
   width: 100% !important;
 }
 
