--- a/catalyst/app/views/steps/index.html.erb
+++ b/catalyst/app/views/steps/index.html.erb
@@ -14,22 +14,32 @@
   <table class="table table-bordered table-striped table-dark">
     <thead>
     <tr>
-      <th scope="col">Serial</th>
       <th scope="col">Name</th>
       <th scope="col">Type</th>
       <th scope="col">Config</th>
       <th scope="col">Condition Expression</th>
+      <% if @flow %>
+        <th scope="col">Serial</th>
+      <% end %>
       <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
     <% @steps.each_with_index do |step, i| %>
         <tr>
-          <th scope="row"><%= step.serial %></th>
           <td><%= step.name %></td>
           <td><%= step.step_type %></td>
           <td><%= step.config.try(:to_json_ea) %></td>
           <td><%= step.display_condition_expression %></td>
+          <% if @flow %>
+            <% fs = FlowsStep.find_by(flow_id: @flow.id, step_id: step.id) %>
+            <td>
+            <%= form_for(fs) do |f| %>
+              <%= f.number_field :serial, class: 'form-control-table', placeholder: 'Serial', required: true, value: fs.try(:serial)%>
+              <%= f.submit 'Update', class: 'btn btn-primary btn-sm' %>
+            <% end %>
+            </td>
+          <% end %>
           <td>
             <%= link_to 'View/edit', { id: step, action: 'edit', site_id: @site.id }, { class: 'btn btn-sm btn-info' } %>
           </td>
