added support for scripting

--- a/catalyst/app/views/steps/_form.html.erb
+++ b/catalyst/app/views/steps/_form.html.erb
@@ -8,8 +8,12 @@
       <%= f.select :step_type, Step.step_types, { include_blank: false }, class: 'form-control' %>
     </div>
     <div class='form-group'>
-      <%= f.label :config %>
-      <%= f.text_area :config, class: 'form-control', placeholder: 'Config', required: true, value: @step.config.try(:to_json_ea), rows: 5 %>
+      <%= f.label 'config (applicable only when step type is not selected as script)' %>
+      <%= f.text_area :config, class: 'form-control', placeholder: 'Config', value: @step.config.try(:to_json_ea), rows: 5 %>
+    </div>
+    <div class='form-group'>
+      <%= f.label 'script (applicable only when step type is selected as script)' %>
+      <%= f.text_area :script, class: 'form-control', placeholder: 'Script', value: @step.script, rows: 5 %>
     </div>
     <div class='form-group'>
       <%= f.label :condition %>
@@ -38,5 +42,6 @@
 <script type="text/javascript">
   $(function() {
     new JSONEditor('#step_config');
+    new ScriptEditor('#step_script');
   })        
 </script>
