--- a/catalyst/app/views/steps/index.html.erb
+++ b/catalyst/app/views/steps/index.html.erb
@@ -33,11 +33,12 @@
           <td><%= step.display_condition_expression %></td>
           <% if @flow %>
             <% fs = FlowsStep.find_by(flow_id: @flow.id, step_id: step.id) %>
-            <td style="min-width: 200px">
-            <%= form_for(fs) do |f| %>
+            <td style="min-width: 250px">
+            <%= form_for(fs, html: { class: 'form-inline', style: 'display: inline-block'  }) do |f| %>
               <%= f.number_field :serial, class: 'form-control-table', placeholder: 'Serial', required: true, value: fs.try(:serial)%>
               <%= f.submit 'Update', class: 'btn btn-primary btn-sm' %>
             <% end %>
+            <%= link_to 'Unlink', flows_step_path(fs), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %> 
             </td>
           <% end %>
           <td>
