--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -1,4 +1,4 @@
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6, .font-stylised {
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -6,8 +6,8 @@ h1, h2, h3, h4, h5, h6 {
   padding: 1.5rem 1rem;
   .logo {
     display: inline-block;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     img {
       width: 100%;
     }
