--- a/web/app/views/layouts/_navbar.html.erb
+++ b/web/app/views/layouts/_navbar.html.erb
@@ -4,6 +4,8 @@
       <span class="logo">
         <img src="https://cdn3.iconfinder.com/data/icons/geek-3/24/Rubics_Cube_toy_magic_cube_geek-512.png"/>
       </span>
+      &nbsp;
+      <span class="font-stylised">qubricks</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
