added user model

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -1,3 +1,9 @@
+// $primary: darken(#241E4E, 0%) !default; // #337ab7
+// $success: #9CFC97 !default;
+// $info: #1AC8ED !default;
+// $warning: #FFA400 !default;
+// $danger: #E55812 !default;
+
 @import 'bootstrap';
 @import 'customize';
 @import 'pages/landing';
