--- a/web/app/views/pages/_sign_up_form.html.erb
+++ b/web/app/views/pages/_sign_up_form.html.erb
@@ -19,6 +19,6 @@
   <small class="text-muted">
     By signing up, you agree to our <a href="#">terms and conditions</a>
     <br>
-    Already have an account? <a href="#">Sign in</a>
+    Already have an account? <a href="/sign_in">Sign in</a>
   </small>
 </form>
