--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6, .font-stylised {
   padding: 1.75rem 0.75rem;
   border: 1px solid #d5dce3;
   outline: none !important;
+  background: #F8F8F8;
   border-radius: 7px;
   &:focus {
     outline: none !important;
