--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -8,22 +8,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
-    <div id="flashes">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-    </div>
+    <%= render partial: 'layouts/flash' %>
     <%= render partial: 'layouts/navbar' %>
     <%= yield(:content) %>
-    <div id="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm">
-            
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render partial: 'layouts/footer' %>
   </body>
 </html>
