styles and fonts

--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
-// $primary: darken(#241E4E, 0%) !default; // #337ab7
-// $success: #9CFC97 !default;
-// $info: #1AC8ED !default;
-// $warning: #FFA400 !default;
-// $danger: #E55812 !default;
+$primary: darken(#5FBFF9, 0%) !default; // #337ab7
+$success: #84DCC6 !default;
+$info: #191716 !default;
+$warning: #F9C22E !default;
+$danger: #F15946 !default;
 
 @import 'bootstrap';
 @import 'customize';
