--- a/web/app/views/layouts/_navbar.html.erb
+++ b/web/app/views/layouts/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand" href="#">
       <span class="logo">
-        <img src="https://cdn3.iconfinder.com/data/icons/geek-3/24/Rubics_Cube_toy_magic_cube_geek-512.png"/>
+        <%= image_tag 'logo_small.png' %>
       </span>
       &nbsp;
       <span class="font-stylised">qubricks</span>
