--- a/web/app/views/layouts/landing.html.erb
+++ b/web/app/views/layouts/landing.html.erb
@@ -5,9 +5,7 @@
         <h1 class="tagline">The all in one platform powering Real Estate</h1>
         <br>
         <p class="text-muted">
-          Qubricks has everything to help you grow your business faster and smarter. 
-          From getting more leads to automating processes, we have got the solution for you.
-          We use the latest technology in our systems thus building fast and secure applications.
+          Qubricks has everything to help you grow your business faster and smarter. From syncing your listings to tracking leads, networking, property auctions and more. We've got the whole package for you. Choose and upgrade according to your needs.
         </p>
       </div>
       <div class="col-sm" id="top-right">
