--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
-$primary: darken(#5FBFF9, 0%) !default; // #337ab7
-$success: #84DCC6 !default;
-$info: #191716 !default;
-$warning: #F9C22E !default;
-$danger: #F15946 !default;
+// $primary: darken(#5FBFF9, 0%) !default; // #337ab7
+// $success: #84DCC6 !default;
+// $info: #191716 !default;
+// $warning: #F9C22E !default;
+// $danger: #F15946 !default;
 
 @import 'bootstrap';
 @import 'customize';
