--- a/web/app/views/pages/_sign_up_form.html.erb
+++ b/web/app/views/pages/_sign_up_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { id: 'sign-up-form' }) do |f| %>
+  <%= f.hidden_field :country_code, value: '+91' %>
   <div class="form-group">
     <%= f.email_field :email, class: 'form-control', placeholder: 'Company Email' %>
   </div>
