--- a/web/app/views/layouts/_navbar.html.erb
+++ b/web/app/views/layouts/_navbar.html.erb
@@ -12,15 +12,11 @@
     </button>
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Features</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Pricing</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact Us</a>
-        </li>
+        <% if current_user %>
+          <%= render partial: 'layouts/navbar_user' %>
+        <% else %>
+          <%= render partial: 'layouts/navbar_guest' %>
+        <% end %>
       </ul>
     </div>
   </div>
