--- a/web/app/assets/stylesheets/application.scss
+++ b/web/app/assets/stylesheets/application.scss
@@ -1,8 +1,8 @@
-// $primary: darken(#5FBFF9, 0%) !default; // #337ab7
-// $success: #84DCC6 !default;
-// $info: #191716 !default;
-// $warning: #F9C22E !default;
-// $danger: #F15946 !default;
+$primary: darken(#2A2A72, 0%) !default; // #337ab7
+$success: #6BF178 !default;
+$info: #1FB6FF !default;
+$warning: #FFA400 !default;
+$danger: #C33C54 !default;
 
 @import 'bootstrap';
 @import 'customize';
