--- a/web/app/views/layouts/landing.html.erb
+++ b/web/app/views/layouts/landing.html.erb
@@ -1,6 +1,6 @@
 <% content_for(:content) do %>
   <div class="container" id="pages-landing">
-    <span class="fas fa-cubes icon-backdrop" aria-hidden="true"></span>
+    <span class="fas fa-cube icon-backdrop" aria-hidden="true"></span>
     <div class="row">
       <div class="col-sm" id="top-left">
         <h1 class="tagline">The all in one platform powering Real Estate</h1>
