--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -1,5 +1,7 @@
 body {
   font-family: 'Roboto', sans-serif;
+  font-size: 0.9375rem;
+  background: #eff2f7;
 }
 
 h1, h2, h3, h4, h5, h6, .font-stylised {
@@ -8,20 +10,21 @@ h1, h2, h3, h4, h5, h6, .font-stylised {
 
 .icon-backdrop {
   position: fixed;
-  color: #007bff;
-  font-size: 1000px;
-  top: 0px;
-  left: 0px;
+  color: #333;
+  opacity: 0.02;
+  font-size: 1500px;
+  top: -100px;
+  left: -100px;
+  right: -100px;
+  text-align: center;
   z-index: -1;
-  opacity: 0.01;
 }
 
 .navbar {
   padding: 1.5rem 1rem;
-
+  font-size: 0.875rem;
   .logo {
     display: inline-block;
-    width: 30px;
     height: 30px;
     img {
       width: 100%;
@@ -30,6 +33,12 @@ h1, h2, h3, h4, h5, h6, .font-stylised {
 
   .font-stylised {
     text-transform: uppercase;
+  }
+  @include media-breakpoint-up(lg) {
+    .nav-link {
+      padding-right: 1rem !important;
+      padding-left: 1rem !important;
+    }
   }
 }
 
@@ -41,11 +50,12 @@ h1, h2, h3, h4, h5, h6, .font-stylised {
   padding: 1.75rem 0.75rem;
   border: 1px solid #d5dce3;
   outline: none !important;
-  background: #F8F8F8;
-  border-radius: 7px;
+  border-radius: 4px;
+  font-size: 0.9375rem;
   &:focus {
     outline: none !important;
     box-shadow: none !important;
+    border: 1px solid $primary;
   }
 }
 
@@ -54,7 +64,7 @@ h1, h2, h3, h4, h5, h6, .font-stylised {
 }
 
 .btn {
-  border-radius: 7px;
+  border-radius: 4px;
 }
 
 #footer {
