--- a/web/app/assets/stylesheets/pages/landing.scss
+++ b/web/app/assets/stylesheets/pages/landing.scss
@@ -9,16 +9,18 @@
 
   #sign-up-form, #sign-in-form {
     padding: 50px;
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
+    // @include media-breakpoint-down(lg) {
+    //   padding-left: 0px;
+    //   padding-right: 0px;
+    // }
 
-    @include media-breakpoint-down(lg) {
-      padding-left: 0px;
-      padding-right: 0px;
-    }
-
-    @include media-breakpoint-up(lg) {
-      padding-left: 100px;
-      padding-right: 0px;
-    }
+    // @include media-breakpoint-up(lg) {
+    //   padding-left: 100px;
+    //   padding-right: 0px;
+    // }
 
     button, input[type='submit'] {
       width: 100%;
