--- a/web/app/views/devise/registrations/_sign_up_form.html.erb
+++ b/web/app/views/devise/registrations/_sign_up_form.html.erb
@@ -8,13 +8,13 @@
     </div>
   <% end %>
   <div class="form-group">
-    <%= f.email_field :email, class: 'form-control', placeholder: 'Company Email', required: true %>
+    <%= f.email_field :email, class: 'form-control', placeholder: 'Company Email', required: true, autocomplete: 'off' %>
   </div>
   <div class="form-group">
-    <%= f.text_field :full_name, class: 'form-control', placeholder: 'Full Name', required: true %>
+    <%= f.text_field :full_name, class: 'form-control', placeholder: 'Full Name', required: true, autocomplete: 'off' %>
   </div>
   <div class="form-group">
-    <%= f.number_field :phone_number, class: 'form-control', placeholder: 'Phone Number', required: true %>
+    <%= f.number_field :phone_number, class: 'form-control', placeholder: 'Phone Number', required: true, autocomplete: 'off' %>
   </div>
   <div class="form-group">
     <%= f.password_field :password, class: 'form-control', placeholder: 'Password', required: true %>
@@ -24,9 +24,9 @@
   </div>
   <%= f.button "Sign up", class: 'btn btn-primary btn-lg', type: 'submit' %>
   <br><br>
-  <small class="text-muted">
+  <p class="text-muted">
     By signing up, you agree to our <a href="#">terms and conditions</a>
     <br>
     Already have an account? <a href="/users/sign_in">Sign in</a>
-  </small>
+  </p>
 <% end %>
