--- a/web/app/views/layouts/_navbar.html.erb
+++ b/web/app/views/layouts/_navbar.html.erb
@@ -2,10 +2,8 @@
   <div class="container">
     <a class="navbar-brand" href="#">
       <span class="logo">
-        <%= image_tag 'logo_small.png' %>
+        <%= image_tag 'logo_full_small.png' %>
       </span>
-      &nbsp;
-      <span class="font-stylised">qubricks</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
