--- a/web/app/views/layouts/_navbar_user.html.erb
+++ b/web/app/views/layouts/_navbar_user.html.erb
@@ -11,5 +11,5 @@
   <a class="nav-link" href="#">Company</a>
 </li>
 <li class="nav-item">
-  <%= link_to('Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-dark btn-sm', id: 'sign-out', role: 'button') %>
+  <%= link_to('Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-info btn-sm', id: 'sign-out', role: 'button') %>
 </li>
