--- a/web/app/views/layouts/landing.html.erb
+++ b/web/app/views/layouts/landing.html.erb
@@ -2,7 +2,7 @@
   <div class="container" id="pages-landing">
     <span class="fas fa-cube icon-backdrop" aria-hidden="true"></span>
     <div class="row">
-      <div class="col-sm" id="top-left">
+      <div class="col-7" id="top-left">
         <h1 class="tagline">The all in one platform powering Real Estate</h1>
         <br>
         <p class="text-muted">
