--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -1,5 +1,6 @@
 body {
   font-weight: 100;
+  background: #f5f5f5;
 }
 
 h1, h2, h3, h4, h5, h6, .font-stylised {
@@ -20,6 +21,7 @@ h1, h2, h3, h4, h5, h6, .font-stylised {
 
 .navbar {
   padding: 1.5rem 1rem;
+  border-top: 8px solid darken($primary, 10%);
   // font-size: 0.875rem;
   .logo {
     display: inline-block;
