--- a/web/app/assets/stylesheets/pages/landing.scss
+++ b/web/app/assets/stylesheets/pages/landing.scss
@@ -11,24 +11,25 @@
   }
 
   #sign-up-form, #sign-in-form {
-    padding: 30px;
-    border-radius: 5px;
-    
-    @include media-breakpoint-down(lg) {
-      padding-left: 0px;
-      padding-right: 0px;
-    }
+    padding: 40px;
+    border-radius: 8px;
+    background: white;
+    box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
+    // @include media-breakpoint-down(lg) {
+    //   padding-left: 0px;
+    //   padding-right: 0px;
+    // }
 
-    @include media-breakpoint-up(lg) {
-      padding-left: 60px;
-      padding-right: 0px;
-    }
+    // @include media-breakpoint-up(lg) {
+    //   padding-left: 60px;
+    //   padding-right: 0px;
+    // }
 
     button, input[type='submit'] {
       width: 100%;
     }
   }
   #sign-in-form {
-    margin-top: 80px;
+    margin-top: 60px;
   }
 }
