--- a/web/app/views/devise/registrations/_sign_up_form.html.erb
+++ b/web/app/views/devise/registrations/_sign_up_form.html.erb
@@ -24,9 +24,9 @@
   </div>
   <%= f.button "Sign up", class: 'btn btn-primary btn-lg', type: 'submit' %>
   <br><br>
-  <p class="text-muted">
-    By signing up, you agree to our <a href="#">terms and conditions</a>
+  <small class="">
+    <span>By signing up, you agree to our <a href="#">terms and conditions</a></span>
     <br>
     Already have an account? <a href="/users/sign_in">Sign in</a>
-  </p>
+  </small>
 <% end %>
