--- a/web/app/views/layouts/_navbar_user.html.erb
+++ b/web/app/views/layouts/_navbar_user.html.erb
@@ -8,7 +8,7 @@
   <a class="nav-link" href="#">Profile</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="#">Company</a>
+  <%= link_to('Company', company_path(current_user.company), class: 'nav-link') %>
 </li>
 <li class="nav-item">
   <%= link_to('Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-info btn-sm', id: 'sign-out', role: 'button') %>
