--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -123,7 +123,7 @@ form {
   }
 }
 .card {
-  padding: 40px;
+  padding: 20px 30px;
   border-radius: 8px;
   background: white;
   box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
