--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -129,3 +129,13 @@ form {
   box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
   margin-bottom: 30px;
 }
+
+.limited-info {
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.divider-right {
+  border-right: 1px solid #dfdfdf;
+}
