--- a/web/app/views/companies/show.html.erb
+++ b/web/app/views/companies/show.html.erb
@@ -6,32 +6,41 @@
           Details
         </h3>
         <small class="card-subtitle text-muted">
+          Lorem ipsum dolor sit amet, consectetur
         </small>
         <p class="card-text">
-          <p>
-            Name - <%= @company.name || 'Not Specified'%>
-            <br>
-            Domain - <a href="<%= @company.cname %>" target="_blank"><%= @company.cname || 'Not Specified'%></a>
-          </p>
+          <div class="row text-center">
+            <div class="col-sm-4 divider-right"> 
+              <%= @company.name || 'Not Specified'%>
+            </div>
+            <div class="col-sm-4 divider-right">
+              <a href="<%= @company.cname %>" target="_blank"><%= @company.cname || 'Not Specified'%></a>
+            </div>
+            <div class="col-sm-4">
+              <%= @company.created_at.strftime("%d/%m/%Y") %>
+            </div>
+          </div>
         </p>
       </div>
     </div>
   </div>
-  <br>
   <div class="row">
     <div class="col-sm">
       <div class="card">
         <h3 class="card-title">Members</h3>
         <small class="card-subtitle text-muted">
+          Morbi mollis, ante in placerat fringilla
         </small>
         <div class="card-text">
           <br>
-          <table class="table table-striped">
+          <table class="table">
             <thead>
               <tr>
                 <th scope="col">#</th>
                 <th scope="col">Name</th>
                 <th scope="col">Email</th>
+                <th scope="col">Confirmed</th>
+                <th scope="col">Joined</th>
                 <th scope="col">Role</th>
               </tr>
             </thead>
@@ -41,7 +50,9 @@
                   <th scope="row"><%= i+1 %></th>
                   <td><%= user.full_name %></td>
                   <td><%= user.email %></td>
-                  <td><span class="badge badge-pill badge-secondary">Member</span></td>
+                  <td><%= user.confirmed? %></td>
+                  <td><%= user.created_at.strftime("%d/%m/%Y") %></td>
+                  <td><span class="badge badge-pill badge-primary">Member</span></td>
                 </tr>
               <% end %>
           </table>
