--- a/web/app/views/layouts/_footer.html.erb
+++ b/web/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="row" id="footer">
+<div class="row bg-info" id="footer">
   <div class="container">
     <div class="col-sm text-center">
       <small>
@@ -6,11 +6,11 @@
       </small>
       <h4>
         <a href="https://www.facebook.com/qubricks">
-          <span class="fab fa-facebook-square" style="color: #3b5998" target="_blank"></span>
+          <span class="fab fa-facebook-square" target="_blank"></span>
         </a>
         &nbsp;
         <a href="https://www.twitter.com/qubricks1">
-          <span class="fab fa-twitter-square" style="color: #1da1f2" target="_blank"></span>
+          <span class="fab fa-twitter-square" target="_blank"></span>
         </a>
       </h4>
     </div>
