--- a/web/app/views/layouts/landing.html.erb
+++ b/web/app/views/layouts/landing.html.erb
@@ -1,11 +1,12 @@
 <% content_for(:content) do %>
   <div class="container" id="pages-landing">
     <div class="row">
+      <div class="gray-shape"></div>
       <div class="col-7" id="top-left">
         <h1 class="tagline font-stylised">The all in one platform powering Real Estate</h1>
         <br>
-        <p>
-          Qubricks has everything to help you grow your business faster and smarter. From syncing your listings to tracking leads, networking, property auctions and more. We've got the whole package for you. Choose and upgrade according to your needs.
+        <p style="font-weight: 300; opacity: 0.7">
+          Grow your business faster and smarter. From syncing your listings to tracking leads, networking, property auctions and more. We've got the whole package for you. Choose and upgrade according to your needs.
         </p>
       </div>
       <div class="col-sm" id="top-right">
