--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -1,10 +1,10 @@
 body {
-  font-weight: 100;
-  background: #f5f5f5;
+  position: relative;
 }
 
 .font-stylised {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Rubik', sans-serif;
+  font-size: 4.625rem;
 }
 
 .page-content {
@@ -25,7 +25,6 @@ body {
 
 .navbar {
   padding: 1.5rem 1rem;
-  border-top: 8px solid darken($primary, 10%);
   // font-size: 0.875rem;
   .logo {
     display: inline-block;
@@ -37,6 +36,12 @@ body {
 
   .font-stylised {
     text-transform: uppercase;
+  }
+
+  .nav-item {
+    .btn {
+      
+    }
   }
   @include media-breakpoint-up(lg) {
     .nav-link {
@@ -52,11 +57,13 @@ body {
 
 .form-control {
   padding: 1.75rem 0.75rem;
-  border: 1px solid #d5dce3;
+  border: 1px solid transparent;
   outline: none !important;
   border-radius: 4px;
   font-size: 0.9375rem;
+  background: #F7F8FB;
   &:focus {
+    border: 1px solid transparent;
     outline: none !important;
     box-shadow: none !important;
     border: 1px solid $primary;
@@ -69,12 +76,41 @@ body {
 
 .btn {
   border-radius: 4px;
+  padding: .5rem 1rem;
+  border-radius: .2rem;
+  line-height: 1.9;
+  border: 0px solid transparent;
+}
+.raised {
+  box-shadow: 30px 30px 60px rgba(0,0,0,.25);
+}
+
+.btn-round {
+  border-radius: 500px;
 }
 
 #footer {
-  color: rgba(0, 0, 0, 0.5);
-  padding-top: 50px;
-  padding-bottom: 20px;
+  color: rgba(255, 255, 255, 0.9);
+  padding-top: 80px;
+  margin-top: 150px;
+  padding-bottom: 80px;
+  a {
+    color: rgba(255, 255, 255, 0.9);
+  }
+}
+
+#footer:before {
+  content: '';
+  background: no-repeat center center;
+  background-image: url('https://signup.heroku.com/assets/header-illustration-3a4c23d829b8e7030dc9083774e0758b3728928904767e24784d840b40b98c78.png');
+  background-size: 953px 210px;
+  background-position: center top;
+  width: 100%;
+  height: 210px;
+  position: relative;
+  top: -80px;
+  left: 0;
+  z-index: 0;
 }
 
 a:hover {
@@ -126,7 +162,6 @@ form {
   padding: 20px 30px;
   border-radius: 8px;
   background: white;
-  box-shadow: 0px 0px 30px rgba(0,0,0,0.1);
   margin-bottom: 30px;
 }
 
@@ -138,4 +173,29 @@ form {
 
 .divider-right {
   border-right: 1px solid #dfdfdf;
+}
+
+.gray-shape {
+  position: absolute;
+  transform: translate(32%,-123%) rotate(250deg);
+  height: 510px;
+  width: 1900px;
+  left: -1150px;
+  top: -220px;
+  border-radius: 100px;
+  background: 0 0;
+  border: 1px solid rgba(208,211,212,.25);
+  z-index: -2;
+}
+
+.gray-shape:before {
+  content: '';
+  position: absolute;
+  top: 65%;
+  left: -12%;
+  z-index: -1;
+  height: 719px;
+  width: 688px;
+  border-radius: 100px;
+  background-color: #F7F8FB;
 }
