--- a/web/app/views/layouts/_navbar_user.html.erb
+++ b/web/app/views/layouts/_navbar_user.html.erb
@@ -2,14 +2,13 @@
   <a class="nav-link" href="#">Listings</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="#">Accounts</a>
-</li>
-<li class="nav-item">
   <a class="nav-link" href="#">Profile</a>
 </li>
 <li class="nav-item">
-  <%= link_to('Company', company_path(current_user.company), class: 'nav-link') %>
+  <%= link_to('Organisation', company_path(current_user.company), class: 'nav-link') %>
 </li>
 <li class="nav-item">
-  <%= link_to('Sign out', destroy_user_session_path, method: :delete, class: 'nav-link btn btn-outline-info btn-sm', id: 'sign-out', role: 'button') %>
+  <%= link_to('New Listing', destroy_user_session_path, method: :delete, class: 'btn btn-secondary btn-round', id: 'sign-out', role: 'button') %>
+  &nbsp;&nbsp;
+  <%= link_to('Sign out', destroy_user_session_path, method: :delete, class: 'btn btn-outline-info btn-round', id: 'sign-out', role: 'button') %>
 </li>
