--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -2,8 +2,15 @@ body {
   position: relative;
 }
 
-.font-stylised {
+body.logged-in {
+  background: #F7F8FB;
+}
+
+h1, h2, h3, h4, h5, h6 {
   font-family: 'Rubik', sans-serif;
+}
+
+.font-stylised {
   font-size: 4.625rem;
 }
 
@@ -159,10 +166,11 @@ form {
   }
 }
 .card {
-  padding: 20px 30px;
+  padding: 80px;
   border-radius: 8px;
   background: white;
   margin-bottom: 30px;
+  border: none;
 }
 
 .limited-info {
@@ -198,4 +206,8 @@ form {
   width: 688px;
   border-radius: 100px;
   background-color: #F7F8FB;
+}
+
+.badge {
+  padding: 0.5rem;
 }
