--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -131,22 +131,27 @@ a:hover {
 #flash {
   .alert {
     position: fixed;
-    left: 20%;
-    right: 20%;
+    border-radius: 7px;
+    max-width: 500px;
+    min-width: 350px;
     top: 20px;
     z-index: 1;
-    box-shadow: 0px 25px 30px rgba(0,0,0,0.15);
-    background: rgba(0,0,0,0.9);
+    box-shadow: 0px 25px 30px rgba(0, 0, 0, 0.15);
+    background: #222;
     border: none;
-    color: rgba(255,255,255,0.9);
+    color: rgba(255, 255, 255, 0.9);
+    left: 50%;
+    transform: translateX(-50%);
     .close {
       color: rgba(255,255,255,0.9);
+      margin-left: 10px;
+      margin-top: -1px;
     }
   }
 }
 
 .alert {
-  padding: 1.2rem 1.5rem;
+  padding: 1rem 1.5rem;
 }
 
 .close {
@@ -210,4 +215,12 @@ form {
 
 .badge {
   padding: 0.5rem;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 600;
+  &:hover {
+    color: rgba(0, 0, 0, 1);
+  }
 }
