--- a/web/app/views/companies/show.html.erb
+++ b/web/app/views/companies/show.html.erb
@@ -1,8 +1,9 @@
-<% @body_class='logged-in' %>
 <div class="container page-content">
   <div class="row">
     <div class="col-sm">
-      <div class="card raised">
+      <div class="card semi-raised">
+        <div class="card-avatar">
+        </div>
         <h3 class="card-title">
           Details
         </h3>
@@ -27,14 +28,14 @@
   </div>
   <div class="row">
     <div class="col-sm">
-      <div class="card raised">
+      <div class="card semi-raised">
         <h3 class="card-title">Members</h3>
         <small class="card-subtitle text-muted">
           Morbi mollis, ante in placerat fringilla
         </small>
         <div class="card-text">
           <br>
-          <table class="table">
+          <table class="table table-bordered table-striped">
             <thead>
               <tr>
                 <th scope="col">#</th>
