--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -3,7 +3,7 @@ body {
 }
 
 body.logged-in {
-  background: #F7F8FB;
+  background: #FdFdFd;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,12 +32,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar {
   padding: 1.5rem 1rem;
-  // font-size: 0.875rem;
+  font-size: 0.875rem;
   .logo {
     display: inline-block;
-    height: 30px;
+    height: 25px;
     img {
-      width: 100%;
+      height: 100%;
+      margin-top: -5px;
     }
   }
 
@@ -45,11 +46,10 @@ h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
   }
 
-  .nav-item {
-    .btn {
-      
-    }
+  .btn {
+    font-size: 0.8rem;
   }
+
   @include media-breakpoint-up(lg) {
     .nav-link {
       padding-right: 1rem !important;
@@ -88,8 +88,13 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1.9;
   border: 0px solid transparent;
 }
+
 .raised {
   box-shadow: 30px 30px 60px rgba(0,0,0,.25);
+}
+
+.semi-raised {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .btn-round {
@@ -171,7 +176,7 @@ form {
   }
 }
 .card {
-  padding: 80px;
+  padding: 40px;
   border-radius: 8px;
   background: white;
   margin-bottom: 30px;
@@ -218,9 +223,15 @@ form {
 }
 
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.8);
-  font-weight: 600;
+  // color: rgba(0, 0, 0, 0.8);
+  // font-weight: 600;
   &:hover {
     color: rgba(0, 0, 0, 1);
+  }
+}
+
+table.table {
+  th, td {
+    padding: 1.2rem;  
   }
 }
