--- a/web/app/views/layouts/_navbar.html.erb
+++ b/web/app/views/layouts/_navbar.html.erb
@@ -10,7 +10,9 @@
     </button>
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto">
+
         <% if current_user %>
+          <%= render partial: 'layouts/navbar_search' %>
           <%= render partial: 'layouts/navbar_user' %>
         <% else %>
           <%= render partial: 'layouts/navbar_guest' %>
