--- a/web/app/views/layouts/_navbar_user.html.erb
+++ b/web/app/views/layouts/_navbar_user.html.erb
@@ -8,7 +8,5 @@
   <%= link_to('Organisation', company_path(current_user.company), class: 'nav-link') %>
 </li>
 <li class="nav-item">
-  <%= link_to('New Listing', destroy_user_session_path, method: :delete, class: 'btn btn-secondary btn-round', id: 'sign-out', role: 'button') %>
-  &nbsp;&nbsp;
-  <%= link_to('Sign out', destroy_user_session_path, method: :delete, class: 'btn btn-outline-info btn-round', id: 'sign-out', role: 'button') %>
+  <%= link_to('New Listing', destroy_user_session_path, method: :delete, class: 'btn btn-secondary btn-round btn-sm raised', id: 'sign-out', role: 'button') %>
 </li>
