working on sites view

--- a/web/app/views/layouts/_navbar_user.html.erb
+++ b/web/app/views/layouts/_navbar_user.html.erb
@@ -11,5 +11,5 @@
   <%= link_to('Sites', sites_path, class: 'nav-link') %>
 </li>
 <li class="nav-item">
-  <%= link_to('New Listing', destroy_user_session_path, method: :delete, class: 'btn btn-secondary btn-round btn-sm raised', id: 'sign-out', role: 'button') %>
+  <%= link_to('New Listing', destroy_user_session_path, method: :delete, class: 'btn btn-secondary btn-round raised', id: 'sign-out', role: 'button') %>
 </li>
