--- a/web/app/assets/stylesheets/customize.scss
+++ b/web/app/assets/stylesheets/customize.scss
@@ -86,15 +86,25 @@ h1, h2, h3, h4, h5, h6 {
   padding: .5rem 1rem;
   border-radius: .2rem;
   line-height: 1.9;
-  border: 0px solid transparent;
+}
+.btn-sm {
+  padding: 0.25rem 0.5rem;
 }
 
+.btn-primary, 
+.btn-secondary, 
+.btn-danger,
+.btn-info,
+.btn-success,
+.btn-warning {
+  border: 0px solid transparent;
+}
 .raised {
   box-shadow: 30px 30px 60px rgba(0,0,0,.25);
 }
 
 .semi-raised {
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .btn-round {
@@ -181,6 +191,9 @@ form {
   background: white;
   margin-bottom: 30px;
   border: none;
+  .card-body {
+    padding: 0px;
+  }
 }
 
 .limited-info {
