--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -18,6 +18,6 @@
     <% else %>
       <%= yield(:content) %>
     <% end %>
-    <%= render partial: 'layouts/footer' %>
+    <%#= render partial: 'layouts/footer' %>
   </body>
 </html>
