--- a/web/app/views/sites/index.html.erb
+++ b/web/app/views/sites/index.html.erb
@@ -1,22 +1,23 @@
 <div class="container page-content">
-  <div class="row">
-    <% @sites.each do |site| %>
-      <div class="col-sm">
-        <div class="card semi-raised">
-          <div class="card-avatar">
-          </div>
-          <h3 class="card-title">
-            <%= site.name %>
-          </h3>
-          <small class="card-subtitle text-muted">
-            <a href="//<%= site.domain %>" target="_blank"><%= site.domain %></a>
-          </small>
-          <p class="card-text">
-            <div class="row">
+  <% @sites.each_slice(3) do |sites| %>
+    <div class="row">
+      <% sites.each do |site| %>
+        <div class="col-sm-4">
+          <div class="card semi-raised">
+            <div class="card-body">
+              <h3 class="card-title">
+                <%= image_tag "#{site.domain}.favicon.png", height: '20px', width: '20px', style: 'margin-top: -3px; border-radius: 300px;' %> <%= site.name %>
+              </h3>
+              <small class="card-subtitle">
+                <a href="//<%= site.domain %>" target="_blank" class="text-info"><%= site.domain.gsub('www.', '') %></a>
+              </small>
+              <p class="card-text">
+              </p>
+              <button class="btn btn-outline-primary btn-sm">connect</button>
             </div>
-          </p>
+          </div>
         </div>
-      </div>
-    <% end %>
-  </div>
+      <% end %>
+    </div>
+  <% end %>
 </div>
