--- a/web/app/views/companies/show.html.erb
+++ b/web/app/views/companies/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container page-content">
   <div class="row">
     <div class="col-sm">
-      <div class="card semi-raised">
+      <div class="card raised">
         <div class="card-avatar">
         </div>
         <h3 class="card-title">
@@ -28,7 +28,7 @@
   </div>
   <div class="row">
     <div class="col-sm">
-      <div class="card semi-raised">
+      <div class="card raised">
         <h3 class="card-title">Members</h3>
         <small class="card-subtitle text-muted">
           Morbi mollis, ante in placerat fringilla
