--- a/web/app/views/sites/index.html.erb
+++ b/web/app/views/sites/index.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <% sites.each do |site| %>
         <div class="col-sm-4">
-          <div class="card semi-raised">
+          <div class="card raised">
             <div class="card-body">
               <h3 class="card-title">
                 <%= image_tag "#{site.domain}.favicon.png", height: '20px', width: '20px', style: 'margin-top: -3px; border-radius: 300px;' %> <%= site.name %>
