--- a/web/app/views/devise/registrations/_sign_up_form.html.erb
+++ b/web/app/views/devise/registrations/_sign_up_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { id: 'sign-up-form', class: 'raised' }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { id: 'sign-up-form', class: 'raised-25' }) do |f| %>
   <%= f.hidden_field :country_code, value: '+91' %>
   <% if resource.errors.any? %>
     <div class="alert alert-danger" role="alert">
