--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -10,9 +10,10 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body class="<%= current_user ? 'logged-in' : '' %>">
+  <body class="<%= current_user ? 'logged-in-' : '' %>">
     <%= render partial: 'layouts/flash' %>
     <%= render partial: 'layouts/navbar' %>
+    <div class="gray-shape"></div>
     <% if current_user %>
       <%= yield %>
     <% else %>
